--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}{% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{% block title %}Lesson 1{% endblock %}{% block content %}
 
-<button class="tablink" onclick="openPage('content', this, 'red')">Content</button>
-<button class="tablink" onclick="openPage('quiz', this, 'green')" id="defaultOpen">Quiz</button>
+<button class="tablink" onclick="openPage('content', this, 'red')" id="defaultOpen">Content</button>
+<button class="tablink" onclick="openPage('quiz', this, 'green')">Quiz</button>
 
 <div id="content" class="tabcontent">
     <h3>Content</h3>
@@ -16,6 +16,37 @@
 <div id="quiz" class="tabcontent">
     <h3>Quiz</h3>
     <p>lol</p>
+    <form method="post" action="/submit">
+        {{ quiz_form.question_1.label }} {% for subfield in quiz_form.question_1 %}
+        <ul>
+            <li>{{ subfield }}|{{ subfield.label }}</li>
+        </ul>
+        {% endfor %} {{ quiz_form.question_2.label }} {% for subfield in quiz_form.question_2 %}
+
+        <tr>
+            <td>{{ subfield }}</td>
+            <td>{{ subfield.label }}</td>
+        </tr>
+        {% endfor %} {{ quiz_form.question_3.label }} {% for subfield in quiz_form.question_3 %}
+
+        <tr>
+            <td>{{ subfield }}</td>
+            <td>{{ subfield.label }}</td>
+        </tr>
+        {% endfor %} {{ quiz_form.question_4.label }} {% for subfield in quiz_form.question_4 %}
+
+        <tr>
+            <td>{{ subfield }}</td>
+            <td>{{ subfield.label }}</td>
+        </tr>
+        {% endfor %} {{ quiz_form.question_5.label }} {% for subfield in quiz_form.question_5 %}
+
+        <tr>
+            <td>{{ subfield }}</td>
+            <td>{{ subfield.label }}</td>
+        </tr>
+        {% endfor %} {{ quiz_form.submit }}
+    </form>
 </div>
 {% endblock %}{% block script %}
 
