--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -136,7 +136,20 @@ p {
       cursor: pointer; 
      }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+
+
+.card{
+    background: rgb(51, 153, 56);    
+    margin: 50px;
+    padding: 20px;
+    border: 10px
+
+}
+
+
+.card-img-top {
+    width: 100%;
+    height: 20vw;
+    object-fit: contain;
+    padding: 10%;
 }
