--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -4,7 +4,7 @@
 
 
 <body>
-<div class="card-deck">
+<div class="card-deck"> <!--That's meta web design...-->
   <div class="card">
     <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png" class="card-img-top" alt="...">
     <div class="card-body">
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.deepstackpoker.com.au/images/poker-hand-royal-flush-big.png" class="card-img-top" alt="...">
+    <img src="https://img.lovepik.com/original_origin_pic/18/11/17/ddc55b617788ddbf4b3cbef886678987.png_wh300.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">The Hands</h5>
       <p class="card-text">In this lesson you will learn the hands and their ranking.</p>
